samples/_failures_safe/1761663509_4907c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1da9db15.c: In function ‘main’:
./samples/SAFE/__tmp_1da9db15.c:162:5: error: expected expression at end of input
  162 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_1da9db15.c:162:5: error: expected declaration or statement at end of input
